src/test/ui/borrowck/borrowck-init-plus-equal.rs
fn test() {
    let mut v: isize;
    v = v + 1; //~ ERROR E0381
    v.clone();
}

fn main() {
}
